kubernetes/apps/external/proxmox/app/nginx-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxmox-nginx
  namespace: external
  labels:
    app.kubernetes.io/name: proxmox-nginx
    app.kubernetes.io/instance: proxmox-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: proxmox-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: proxmox-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.31-alpine
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: config
          configMap:
            name: proxmox-nginx-config
