kubernetes/apps/external/proxmox/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app proxmox
  namespace: external
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: proxmox-nginx
  ports:
    - port: 8006
      protocol: TCP
      targetPort: 8080
