kubernetes/apps/external/proxmox/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app proxmox
  namespace: external
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    hajimari.io/icon: "simple-icons:proxmox"
spec:
  ingressClassName: nginx
  rules:
    - host: &host proxmox.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 443
  tls:
    - hosts:
        - *host
