kubernetes/apps/external/proxmox/app/tcp-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: &app proxmox-tcp
  namespace: external
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: proxmox
          port: 8006
